--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Small project for quickly testing Cypress.io test runner",
   "scripts": {
     "cypress:run": "cypress run",
-    "cypress:open": "cypress open",
+    "cypress:open": "cypress open --config-file cypress/config/cypress.config.ts --e2e --browser chrome",
     "cypress:verify": "cypress verify",
     "cypress:version": "cypress version",
     "cypress:info": "cypress info",
@@ -15,11 +15,14 @@
   "author": "Cypress-io",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^12.12.0"
+    "cypress": "^12.12.0",
+    "typescript-styled-plugin": "^0.18.3"
   },
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/cypress-io/cypress-test-tiny.git"
+  },
+  "dependencies": {
+    "typescript": "^5.0.4"
   }
 }
